--- a/meson.build
+++ b/meson.build
@@ -18,7 +18,10 @@ pyext_source_files = [
 ]
 
 python_files_toplevel = [
-    'src_python/direct_sht/__init__.py'
+    'src_python/direct_sht/__init__.py',
+    'src_python/direct_sht/__main__.py',
+    'src_python/direct_sht/direct_sht.py',
+    'src_python/direct_sht/time_direct_sht.py'
 ]    
 
 local_executables = [
