--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ python_files_toplevel = [
     'src_python/direct_sht/__init__.py',
     'src_python/direct_sht/__main__.py',
     'src_python/direct_sht/direct_sht.py',
+    'src_python/direct_sht/tests.py',
     'src_python/direct_sht/time_direct_sht.py'
 ]    
 
